# SlicerIGT

./: CMakeLists.txt
AutoTransparency/: CMakeLists.txt
AutoTransparency/AutoTransparency/: AutoTransparency.py  CMakeLists.txt
